# CodeForUniversity

./: .gitignore  README.md  pyproject.toml  students.db
1/NM/: laborant_1.py  laborant_2.py  laborant_3.py  laborant_4.py  laborant_5.py  laborant_7.py
1/NM/laborant_6/: task_1.py  task_2.py
1/OAIP/1sem/: laborant_1.py  laborant_2.py  laborant_4.py  laborant_5.py  laborant_8.py
1/RPM/laborant_11/: task_1.py
1/SP/laborant_1/: flagregister.py  main.py  register.py
1/SP/laborant_2/: flagregister.py  main.py
1/SP/laborant_3/: flagregister.py  main.py  register.py
1/SP/laborant_4/: assembler.py  stack.py
2/RPM/: laborant_1.py  laborant_12.py  laborant_3.py  laborant_6.py  laborant_8.py
2/RPM/laborant_10/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
2/RPM/laborant_11/: res.csv  task_1.py  task_2.py  (+1 more)
NM/: laborant_2.py  laborant_3.py  laborant_4.py  laborant_7.py
NM/laborant_6/: task_2.py
OAIP/2sem/: project.py
Other/: calc_easteregg.py  heart_name.py  sword.py
Other/clear_pc/: delete.py  sort.py
Other/otchet/: main.py
RPM/: laborant_7.py
RPM/laborant_1/: inventory.py  task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  times.py
RPM/laborant_11/: task_1.py
RPM/laborant_2/: task_1.py  task_3.py  task_4.py
RPM/laborant_3/: task_2.py  task_3.py
RPM/laborant_5/: task_1.py  task_2.py  task_3.py
RPM/laborant_8/: task_1.py  task_2.py  task_3.py
RPM/laborant_9/: task_1.py  task_2.py
SP/laborant_1/: flagregister.py  main.py  register.py
SP/laborant_2/: register.py
SP/laborant_4/: assembler.py  main.py  register.py
(+274 files in other folders)
