[project]
name = "CodeForUniversity"
version = "0.4.2"
description = "Репозиторий для отчётов по учебным работам"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "behave>=1.3.3",
    "numpy>=2.4.1",
    "pyqt6>=6.10.2",
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
    "python-docx>=1.2.0",
    "scipy>=1.17.0",
    "tabulate>=0.9.0",
]
